Доработка отправки писем на почту

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-
+    <!-- Первая секция с навигационным меню -->
     <section id="up" class="main">
         <nav id="nav" class="nav">
             <img src="img/Logo.png" alt="" class="nav__logo">
@@ -57,7 +57,7 @@
             </div>
         </div> 
     </section>
-    
+    <!-- Секция "Полный спектр бухгалтерских услуг" -->
     <section class="services">
         <div class="container">
             <h2 class="services-title">ПОЛНЫЙ СПЕКТР <span>БУХГАЛТЕРСКИХ УСЛУГ</span></h2>
@@ -95,6 +95,7 @@
         </div>
         <img src="img/background/pic.png" alt="Калькулятор" class="services__img">
     </section>
+    <!-- Секция "О компании в цифрах" -->
     <section class="company">
         <div class="container">
             <h2 class="company-title">О КОМПАНИИ В ЦИФРАХ</h2>
@@ -122,6 +123,7 @@
             </div>
         </div>
     </section>
+    <!-- Секция с картинкой телефона и формой обратной связи -->
     <section class="coop">
         <h2 class="coop-title">6 ПРИЧИН <span>ДЛЯ СОТРУДНИЧЕСТВА </span>С НАМИ</h2>
         <div class="coop__wrapper-all">
@@ -167,6 +169,7 @@
             <img src="img/background/Sale.png" alt="" class="form__img-sale">
         </div>
     </section>
+    <!-- Секция с первым слайдером -->
     <section class="cert">
         <div class="container">
             <h2 class="cert-title">НАШИ СЕРТИФИКАТЫ</h2>
@@ -179,6 +182,7 @@
 
         </div>
     </section>
+    <!-- Секция "Как мы работаем?" -->
     <section class="job">
         <div class="container-job">
             <h2 class="job-title">КАК МЫ <span>РАБОТАЕМ?</span></h2>
@@ -215,6 +219,7 @@
             <img src="img/woman/woman-job.png" alt="Девушка" class="job__img">
         </div>
     </section>
+    <!-- Секция со вторым слайдером -->
     <section class="reviews">
         <div class="container">
             <h2 class="reviews-title">ОТЗЫВЫ НАШИХ КЛИЕНТОВ</р>
@@ -229,7 +234,7 @@
             </div>
         </div>
     </section>
-    <!-- Последняя форма -->
+    <!-- Последняя форма обратной связи -->
     <section class="questions">
         <div class="container">
             <h2 class="questions-title">ОСТАЛИСЬ <span>ВОПРОСЫ?</span></h2>
@@ -252,6 +257,7 @@
             </div>
         </div>
     </section>
+    <!-- Подвал сайта -->
     <footer class="footer">
         <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A913ed5233e23120c711a99b0aa142de73eed1eb6a1982e5e5e1f5bf17b2a89d0&amp;source=constructor" width="100%" height="750" frameborder="0"></iframe>
         <div class="container">
@@ -290,7 +296,7 @@
     <a href="#up" class="up">
         <img src="icons/up.png" alt="" class="scroll">
     </a>
-
+    <!-- Модальные окна -->
     <div class="modal-forms">
         <div class="modal-forms__overlay">
             <div class="container">
@@ -315,11 +321,13 @@
     <!-- Слайдер -->
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <!-- Маска для телефона -->
     <script src="js/jquery.maskedinput.min.js"></script>
+    <!-- Валидация форм -->
     <script src="js/jquery.validate.min.js"></script>
+    <!-- Слайдер -->
     <script src="js/slick.min.js"></script>
     <!-- ------- -->
-    <script src="/js/script.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
