--- a/index.html
+++ b/index.html
@@ -156,6 +156,9 @@
                 </div>
             </div>
         </div>
+        <!-- Указать телефон в сплошную, как тут href="tel:79993546786" -->
+        <a href="tel:79993546786"><img src="icons/colling.png" alt="Звоните!" class="coop__colling"></a>
+        <img src="icons/arrow-phone.png" alt="Стрелка вверх" class="coop__arrow">
         <img src="img/background/phone.png" alt="Телефон" class="coop__img">
         <div class="form">
             <div class="form__wrapper">
