--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
     <!-- Подвал сайта -->
     <footer id="footer" class="footer">
         <!-- Карта сделать на конструктое для своего местоположения https://yandex.ru/map-constructor/   -->
-        <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A913ed5233e23120c711a99b0aa142de73eed1eb6a1982e5e5e1f5bf17b2a89d0&amp;source=constructor" width="100%" height="750" frameborder="0"></iframe>
+        <iframe id="map" src="https://yandex.ru/map-widget/v1/?um=constructor%3A913ed5233e23120c711a99b0aa142de73eed1eb6a1982e5e5e1f5bf17b2a89d0&amp;source=constructor" width="100%" height="750" frameborder="0"></iframe>
         <!-- ------------------------------------------------------------------------------------------- -->
         <div class="container">
             <div class="footer__wrapper-block-logo">
