Переделал множество элементов

--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
         <!-- Указать телефон в сплошную, как тут href="tel:79993546786" -->
         <a href="tel:79993546786"><img src="icons/colling.png" alt="Звоните!" class="coop__colling"></a>
         <img src="icons/arrow-phone.png" alt="Стрелка вверх" class="coop__arrow">
+        <img src="img/background/linear.png" alt="" class="coop__circle-img">
         <img src="img/background/phone.png" alt="Телефон" class="coop__img">
         <div class="form">
             <div class="form__wrapper">
@@ -176,7 +177,7 @@
     </section>
     <!-- Секция с первым слайдером -->
     <section class="cert">
-        <div class="container">
+        <div class="container-c">
             <h2 class="cert-title">НАШИ СЕРТИФИКАТЫ</h2>
 
             <div class="cert__slider">
@@ -194,10 +195,12 @@
             <div class="job__wrapper-all">
                 <div class="job__wrapper-up">
                     <div class="job__wrapper-left-2">
+                        <div class="job__numbers">01</div>
                         <div class="job-title-block">Заявка</div>
                         <div class="job__text">Позвоните нам или оставьте<br> заявку - наш сотрудник<br> свяжется с Вами<br> в ближайшее время</div>
                     </div>
                     <div class="job__wrapper-left">
+                        <div class="job__numbers-5">05</div>
                         <div class="job-title-block">Партнеры</div>
                         <div class="job__text">Вы забываете о бухгалтерской<br> и налоговой отчетности<br> и занимаетесь рабочими<br> вопросами, а мы делаем<br> эту работу за Вас</div>
                     </div>
@@ -205,10 +208,12 @@
 
                 <div class="job__wrapper-down">
                     <div class="job__wrapper-left">
+                        <div class="job__numbers-2">02</div>
                         <div class="job-title-block">Встреча</div>
                         <div class="job__text">При необходимости мы<br> встретимся с Вами для<br> обсуждения деталей</div>
                     </div>
                     <div class="job__wrapper-right-2">
+                        <div class="job__numbers-4">04</div>
                         <div class="job-title-block">Подписание<br> договора</div>
                         <div class="job__text">После согласования<br> стоимости услуг, заключаем<br> договор с Вашей компанией</div>
                     </div>
@@ -216,6 +221,7 @@
 
 
                 <div class="job__wrapper-center">
+                    <div class="job__numbers-3">03</div>
                     <div class="job-title-block">Анализ и Оценка</div>
                     <div class="job__text">В беседе мы узнаем<br> специфику и детали Вашего<br> бизнеса, чтобы уточнить<br> стоимость обслуживания</div>
                 </div>
@@ -230,11 +236,61 @@
             <h2 class="reviews-title">ОТЗЫВЫ НАШИХ КЛИЕНТОВ</р>
             <div class="reviews__wrapper">
                 <div class="cert__slider">
-                    <div><img src="img/background/Group-slider.png" alt="Карточка" class="reviews__img"></div>
-                    <div><img src="img/background/Group-slider.png" alt="Карточка" class="reviews__img"></div>
-                    <div><img src="img/background/Group-slider.png" alt="Карточка" class="reviews__img"></div>
-                    <div><img src="img/background/Group-slider.png" alt="Карточка" class="reviews__img"></div>
-                    <div><img src="img/background/Group-slider.png" alt="Карточка" class="reviews__img"></div>
+                    <div class="reviews__img">
+                        <div class="reviews__wrapper-av">
+                            <img src="img/background/avatar.png" alt="" class="reviews__avatar">
+                        </div>
+                        <div class="reviews__elem">
+                            <img src="img/background/client.png" alt="" class="reviews__tran">
+                            <div class="reviews__too">ТОО "Трансазия"</div>
+                            <div class="reviews__post">заместитель генерального директора<br> Белашов Александр</div>
+                            <div class="reviews__text">Наше сотрудничество длится с 2012 года, за это время сотрудники<br> “Fintime” зарекомендовали себя как квалифицированные, хорошо<br> знающие законодательную базу РК, способными комплексно<br> выполнять значительные объемы бухгалтерских услуг с высоким<br> качеством и в установленные договором сроки. На возникающие<br> вопросы давали исчерпывающие ответы. Мы уверены, что<br> дальнейшее сотрудничество также будет плодотворным!</div>
+                        </div>
+                    </div>
+                    <div class="reviews__img">
+                        <div class="reviews__wrapper-av">
+                            <img src="img/background/avatar.png" alt="" class="reviews__avatar">
+                        </div>
+                        <div class="reviews__elem">
+                            <img src="img/background/client.png" alt="" class="reviews__tran">
+                            <div class="reviews__too">ТОО "Трансазия"</div>
+                            <div class="reviews__post">заместитель генерального директора<br> Белашов Александр</div>
+                            <div class="reviews__text">Наше сотрудничество длится с 2012 года, за это время сотрудники<br> “Fintime” зарекомендовали себя как квалифицированные, хорошо<br> знающие законодательную базу РК, способными комплексно<br> выполнять значительные объемы бухгалтерских услуг с высоким<br> качеством и в установленные договором сроки. На возникающие<br> вопросы давали исчерпывающие ответы. Мы уверены, что<br> дальнейшее сотрудничество также будет плодотворным!</div>
+                        </div>
+                    </div>
+                    <div class="reviews__img">
+                        <div class="reviews__wrapper-av">
+                            <img src="img/background/avatar.png" alt="" class="reviews__avatar">
+                        </div>
+                        <div class="reviews__elem">
+                            <img src="img/background/client.png" alt="" class="reviews__tran">
+                            <div class="reviews__too">ТОО "Трансазия"</div>
+                            <div class="reviews__post">заместитель генерального директора<br> Белашов Александр</div>
+                            <div class="reviews__text">Наше сотрудничество длится с 2012 года, за это время сотрудники<br> “Fintime” зарекомендовали себя как квалифицированные, хорошо<br> знающие законодательную базу РК, способными комплексно<br> выполнять значительные объемы бухгалтерских услуг с высоким<br> качеством и в установленные договором сроки. На возникающие<br> вопросы давали исчерпывающие ответы. Мы уверены, что<br> дальнейшее сотрудничество также будет плодотворным!</div>
+                        </div>
+                    </div>
+                    <div class="reviews__img">
+                        <div class="reviews__wrapper-av">
+                            <img src="img/background/avatar.png" alt="" class="reviews__avatar">
+                        </div>
+                        <div class="reviews__elem">
+                            <img src="img/background/client.png" alt="" class="reviews__tran">
+                            <div class="reviews__too">ТОО "Трансазия"</div>
+                            <div class="reviews__post">заместитель генерального директора<br> Белашов Александр</div>
+                            <div class="reviews__text">Наше сотрудничество длится с 2012 года, за это время сотрудники<br> “Fintime” зарекомендовали себя как квалифицированные, хорошо<br> знающие законодательную базу РК, способными комплексно<br> выполнять значительные объемы бухгалтерских услуг с высоким<br> качеством и в установленные договором сроки. На возникающие<br> вопросы давали исчерпывающие ответы. Мы уверены, что<br> дальнейшее сотрудничество также будет плодотворным!</div>
+                        </div>
+                    </div>
+                    <div class="reviews__img">
+                        <div class="reviews__wrapper-av">
+                            <img src="img/background/avatar.png" alt="" class="reviews__avatar">
+                        </div>
+                        <div class="reviews__elem">
+                            <img src="img/background/client.png" alt="" class="reviews__tran">
+                            <div class="reviews__too">ТОО "Трансазия"</div>
+                            <div class="reviews__post">заместитель генерального директора<br> Белашов Александр</div>
+                            <div class="reviews__text">Наше сотрудничество длится с 2012 года, за это время сотрудники<br> “Fintime” зарекомендовали себя как квалифицированные, хорошо<br> знающие законодательную базу РК, способными комплексно<br> выполнять значительные объемы бухгалтерских услуг с высоким<br> качеством и в установленные договором сроки. На возникающие<br> вопросы давали исчерпывающие ответы. Мы уверены, что<br> дальнейшее сотрудничество также будет плодотворным!</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -247,6 +303,9 @@
                 <img src="img/woman/woman-questions.png" alt="Девушка" class="questions__img">
                 <div class="questions__form">
                     <div class="questions__form-wrapper">
+                        <div id="hid" class="questions__hidden">
+                            <img src="img/background/background-form.png" alt="" class="questions__bg">
+                        </div>
                         <div class="questions__form-application">Задайте вопрос<br><span>Мы свяжемся с Вами<br> и проконсультируем</span></div>
                         <form id="form-2" action="#" class="questions__form" method="post" name="contact">
                             <div class="questions__name">Введите Ваше имя*</div>
