Предпоследний этап адаптации

--- a/index.html
+++ b/index.html
@@ -242,9 +242,9 @@
                         </div>
                         <div class="reviews__elem">
                             <img src="img/background/client.png" alt="" class="reviews__tran">
-                            <div class="reviews__too">ТОО "Трансазия"</div>
-                            <div class="reviews__post">заместитель генерального директора<br> Белашов Александр</div>
-                            <div class="reviews__text">Наше сотрудничество длится с 2012 года, за это время сотрудники<br> “Fintime” зарекомендовали себя как квалифицированные, хорошо<br> знающие законодательную базу РК, способными комплексно<br> выполнять значительные объемы бухгалтерских услуг с высоким<br> качеством и в установленные договором сроки. На возникающие<br> вопросы давали исчерпывающие ответы. Мы уверены, что<br> дальнейшее сотрудничество также будет плодотворным!</div>
+                            <div id="rev-post" class="reviews__too">ТОО "Трансазия"</div>
+                            <div id="rev-post" class="reviews__post">заместитель генерального директора<br> Белашов Александр</div>
+                            <div id="rev-text" class="reviews__text">Наше сотрудничество длится с 2012 года, за это время сотрудники<br> “Fintime” зарекомендовали себя как квалифицированные, хорошо<br> знающие законодательную базу РК, способными комплексно<br> выполнять значительные объемы бухгалтерских услуг с высоким<br> качеством и в установленные договором сроки. На возникающие<br> вопросы давали исчерпывающие ответы. Мы уверены, что<br> дальнейшее сотрудничество также будет плодотворным!</div>
                         </div>
                     </div>
                     <div class="reviews__img">
@@ -253,9 +253,9 @@
                         </div>
                         <div class="reviews__elem">
                             <img src="img/background/client.png" alt="" class="reviews__tran">
-                            <div class="reviews__too">ТОО "Трансазия"</div>
-                            <div class="reviews__post">заместитель генерального директора<br> Белашов Александр</div>
-                            <div class="reviews__text">Наше сотрудничество длится с 2012 года, за это время сотрудники<br> “Fintime” зарекомендовали себя как квалифицированные, хорошо<br> знающие законодательную базу РК, способными комплексно<br> выполнять значительные объемы бухгалтерских услуг с высоким<br> качеством и в установленные договором сроки. На возникающие<br> вопросы давали исчерпывающие ответы. Мы уверены, что<br> дальнейшее сотрудничество также будет плодотворным!</div>
+                            <div id="rev-post" class="reviews__too">ТОО "Трансазия"</div>
+                            <div id="rev-post" class="reviews__post">заместитель генерального директора<br> Белашов Александр</div>
+                            <div id="rev-text" class="reviews__text">Наше сотрудничество длится с 2012 года, за это время сотрудники<br> “Fintime” зарекомендовали себя как квалифицированные, хорошо<br> знающие законодательную базу РК, способными комплексно<br> выполнять значительные объемы бухгалтерских услуг с высоким<br> качеством и в установленные договором сроки. На возникающие<br> вопросы давали исчерпывающие ответы. Мы уверены, что<br> дальнейшее сотрудничество также будет плодотворным!</div>
                         </div>
                     </div>
                     <div class="reviews__img">
@@ -264,9 +264,9 @@
                         </div>
                         <div class="reviews__elem">
                             <img src="img/background/client.png" alt="" class="reviews__tran">
-                            <div class="reviews__too">ТОО "Трансазия"</div>
-                            <div class="reviews__post">заместитель генерального директора<br> Белашов Александр</div>
-                            <div class="reviews__text">Наше сотрудничество длится с 2012 года, за это время сотрудники<br> “Fintime” зарекомендовали себя как квалифицированные, хорошо<br> знающие законодательную базу РК, способными комплексно<br> выполнять значительные объемы бухгалтерских услуг с высоким<br> качеством и в установленные договором сроки. На возникающие<br> вопросы давали исчерпывающие ответы. Мы уверены, что<br> дальнейшее сотрудничество также будет плодотворным!</div>
+                            <div id="rev-post" class="reviews__too">ТОО "Трансазия"</div>
+                            <div id="rev-post" class="reviews__post">заместитель генерального директора<br> Белашов Александр</div>
+                            <div id="rev-text" class="reviews__text">Наше сотрудничество длится с 2012 года, за это время сотрудники<br> “Fintime” зарекомендовали себя как квалифицированные, хорошо<br> знающие законодательную базу РК, способными комплексно<br> выполнять значительные объемы бухгалтерских услуг с высоким<br> качеством и в установленные договором сроки. На возникающие<br> вопросы давали исчерпывающие ответы. Мы уверены, что<br> дальнейшее сотрудничество также будет плодотворным!</div>
                         </div>
                     </div>
                     <div class="reviews__img">
@@ -275,9 +275,9 @@
                         </div>
                         <div class="reviews__elem">
                             <img src="img/background/client.png" alt="" class="reviews__tran">
-                            <div class="reviews__too">ТОО "Трансазия"</div>
-                            <div class="reviews__post">заместитель генерального директора<br> Белашов Александр</div>
-                            <div class="reviews__text">Наше сотрудничество длится с 2012 года, за это время сотрудники<br> “Fintime” зарекомендовали себя как квалифицированные, хорошо<br> знающие законодательную базу РК, способными комплексно<br> выполнять значительные объемы бухгалтерских услуг с высоким<br> качеством и в установленные договором сроки. На возникающие<br> вопросы давали исчерпывающие ответы. Мы уверены, что<br> дальнейшее сотрудничество также будет плодотворным!</div>
+                            <div id="rev-post" class="reviews__too">ТОО "Трансазия"</div>
+                            <div id="rev-post" class="reviews__post">заместитель генерального директора<br> Белашов Александр</div>
+                            <div id="rev-text" class="reviews__text">Наше сотрудничество длится с 2012 года, за это время сотрудники<br> “Fintime” зарекомендовали себя как квалифицированные, хорошо<br> знающие законодательную базу РК, способными комплексно<br> выполнять значительные объемы бухгалтерских услуг с высоким<br> качеством и в установленные договором сроки. На возникающие<br> вопросы давали исчерпывающие ответы. Мы уверены, что<br> дальнейшее сотрудничество также будет плодотворным!</div>
                         </div>
                     </div>
                     <div class="reviews__img">
@@ -286,9 +286,9 @@
                         </div>
                         <div class="reviews__elem">
                             <img src="img/background/client.png" alt="" class="reviews__tran">
-                            <div class="reviews__too">ТОО "Трансазия"</div>
-                            <div class="reviews__post">заместитель генерального директора<br> Белашов Александр</div>
-                            <div class="reviews__text">Наше сотрудничество длится с 2012 года, за это время сотрудники<br> “Fintime” зарекомендовали себя как квалифицированные, хорошо<br> знающие законодательную базу РК, способными комплексно<br> выполнять значительные объемы бухгалтерских услуг с высоким<br> качеством и в установленные договором сроки. На возникающие<br> вопросы давали исчерпывающие ответы. Мы уверены, что<br> дальнейшее сотрудничество также будет плодотворным!</div>
+                            <div id="rev-post" class="reviews__too">ТОО "Трансазия"</div>
+                            <div id="rev-post" class="reviews__post">заместитель генерального директора<br> Белашов Александр</div>
+                            <div id="rev-text" class="reviews__text">Наше сотрудничество длится с 2012 года, за это время сотрудники<br> “Fintime” зарекомендовали себя как квалифицированные, хорошо<br> знающие законодательную базу РК, способными комплексно<br> выполнять значительные объемы бухгалтерских услуг с высоким<br> качеством и в установленные договором сроки. На возникающие<br> вопросы давали исчерпывающие ответы. Мы уверены, что<br> дальнейшее сотрудничество также будет плодотворным!</div>
                         </div>
                     </div>
                 </div>
