--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <!-- Слик слайдер -->
     <link rel="stylesheet" type="text/css" href="sass/dist/slick.css"/>
     <!-- ------------ -->
+    <!-- Анимация -->
+    <link rel="stylesheet" href="sass/dist/aos.css">
+    <!-- -------- -->
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
@@ -130,29 +133,29 @@
         <h2 class="coop-title">6 ПРИЧИН <span>ДЛЯ СОТРУДНИЧЕСТВА </span>С НАМИ</h2>
         <div class="coop__wrapper-all">
             <div class="coop__wrapper-left">
-                <div class="coop__block-text-left">
+                <div data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000" class="coop__block-text-left">
                     <div class="coop-title-block">Снижение затрат</div>
                     <div class="coop__text">Аутсорсинг бухгалтерских услуг<br> от нашей компании позволит Вам<br> сэкономить до 70% затрат на<br> содержание собственных<br> бухгалтеров</div>
                 </div>
-                <div class="coop__block-text-left-v">
+                <div data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000" class="coop__block-text-left-v">
                     <div class="coop-title-block">Высокий уровень<br> сервиса</div>
                     <div class="coop__text">Стандартизированные<br> бизнес-процессы и система<br> внутреннего контроля позволяют<br> нам решать сложные вопросы<br> быстро и эффективно</div>
                 </div>
-                <div class="coop__block-text-left">
+                <div data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000" class="coop__block-text-left">
                     <div class="coop-title-block">Экономия времени</div>
                     <div class="coop__text">Вы сможете полностью<br> сконцентрироваться<br> на основном бизнесе<br> и не тратить время<br> на решение бухгалтерского<br> и налогового учета</div>
                 </div>
             </div>
             <div class="coop__wrapper-right">
-                <div class="coop__block-text-right">
+                <div data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000" class="coop__block-text-right">
                     <div class="coop-title-block">Надежный партнер</div>
                     <div class="coop__text">Персональный бухгалтер<br> оперативно выполнит задачи<br> в срок с надлежащим качеством</div>
                 </div>
-                <div class="coop__block-text-right-v">
+                <div data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000" class="coop__block-text-right-v">
                     <div class="coop-title-block">Ответственность</div>
                     <div class="coop__text">Компания несет ответственность<br> за правильность ведения<br> бухгалтерского и налогового<br> учета в рамках договора на<br> обслуживание, заключенного<br> с Вашей компанией в срок<br> с надлежащим качеством</div>
                 </div>
-                <div class="coop__block-text-right">
+                <div data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000" class="coop__block-text-right">
                     <div class="coop-title-block">Конфиденциальность</div>
                     <div class="coop__text">Компания обеспечит<br> конфиденциальность полученной<br> информации и сведений,<br> содержащихся в документах</div>
                 </div>
@@ -194,12 +197,12 @@
             <h2 class="job-title">КАК МЫ <span>РАБОТАЕМ?</span></h2>
             <div class="job__wrapper-all">
                 <div class="job__wrapper-up">
-                    <div class="job__wrapper-left-2">
+                    <div data-aos="zoom-in-up" class="job__wrapper-left-2">
                         <div class="job__numbers">01</div>
                         <div class="job-title-block">Заявка</div>
                         <div class="job__text">Позвоните нам или оставьте<br> заявку - наш сотрудник<br> свяжется с Вами<br> в ближайшее время</div>
                     </div>
-                    <div class="job__wrapper-left">
+                    <div data-aos="zoom-in-up" class="job__wrapper-left">
                         <div class="job__numbers-5">05</div>
                         <div class="job-title-block">Партнеры</div>
                         <div class="job__text">Вы забываете о бухгалтерской<br> и налоговой отчетности<br> и занимаетесь рабочими<br> вопросами, а мы делаем<br> эту работу за Вас</div>
@@ -207,12 +210,12 @@
                 </div>
 
                 <div class="job__wrapper-down">
-                    <div class="job__wrapper-left">
+                    <div data-aos="zoom-in-up" class="job__wrapper-left">
                         <div class="job__numbers-2">02</div>
                         <div class="job-title-block">Встреча</div>
                         <div class="job__text">При необходимости мы<br> встретимся с Вами для<br> обсуждения деталей</div>
                     </div>
-                    <div class="job__wrapper-right-2">
+                    <div data-aos="zoom-in-up" class="job__wrapper-right-2">
                         <div class="job__numbers-4">04</div>
                         <div class="job-title-block">Подписание<br> договора</div>
                         <div class="job__text">После согласования<br> стоимости услуг, заключаем<br> договор с Вашей компанией</div>
@@ -220,7 +223,7 @@
                 </div>
 
 
-                <div class="job__wrapper-center">
+                <div data-aos="zoom-in-up" class="job__wrapper-center">
                     <div class="job__numbers-3">03</div>
                     <div class="job-title-block">Анализ и Оценка</div>
                     <div class="job__text">В беседе мы узнаем<br> специфику и детали Вашего<br> бизнеса, чтобы уточнить<br> стоимость обслуживания</div>
@@ -394,6 +397,9 @@
     <!-- Слайдер -->
     <script src="js/slick.min.js"></script>
     <!-- ------- -->
+    <!-- Анимация -->
+    <script src="js/aos.js"></script>
+    <!-- -------- -->
     <script src="js/script.js"></script>
 </body>
 </html>
