--- a/index.html
+++ b/index.html
@@ -83,15 +83,15 @@
                 </div>
                 <div class="services__wrapper-right">
                     <div class="services__block-text-right">
-                        <div class="services-title-block">Восстановление</div>
+                        <div id="r1" class="services-title-block">Восстановление</div>
                         <div class="services__text">Восстановим учет в целом<br> или на отдельных участках</div>
                     </div>
                     <div class="services__block-text-right">
-                        <div class="services-title-block">Экспресс анализ</div>
+                        <div id="r2" class="services-title-block">Экспресс анализ</div>
                         <div class="services__text">Проверим корректность<br> ведения бухгалтерского<br> и налогового учета Вашей<br> компании</div>
                     </div>
                     <div class="services__block-text-right">
-                        <div class="services-title-block">Разовые услуги</div>
+                        <div id="r3" class="services-title-block">Разовые услуги</div>
                         <div class="services__text">Выполним в кратчайшие<br> сроки: регистрацию,<br> постановку на учет.<br> Подготовим бухгалтерские<br> документы</div>
                     </div>
                 </div>
