--- a/index.html
+++ b/index.html
@@ -331,22 +331,22 @@
         <!-- ------------------------------------------------------------------------------------------- -->
         <div class="container">
             <div class="footer__wrapper-block-logo">
-                <div class="footer__wrapper-block">
-                    <h2 class="footer-title">НАШИ КОНТАКТЫ</h2>
+                <div id="block" class="footer__wrapper-block">
+                    <h2 id="f0" class="footer-title">НАШИ КОНТАКТЫ</h2>
                     <div class="footer__wrapper-address">
                         <img class="footer__geo" src="icons/Icon-Geo.png" alt="Картинка геоданных">
-                        <address>г. Example, пр. Example, 999, уг.<br> ул. Example, "Example",<br> 9-этаж, 999 кабинет</address>
+                        <address id="f1">г. Example, пр. Example, 999, уг.<br> ул. Example, "Example",<br> 9-этаж, 999 кабинет</address>
                     </div>
                     <div class="footer__wrapper-phone">
                         <img class="footer__phone-img" src="icons/Icon-phone.png" alt="Картинка телефона">
                         <div class="footer__wrap-ph">
-                            <a class="footer__phone" href="tel:79999999999">+7 (999) 999-99-99</a>
-                            <a class="footer__phone" href="tel:79999999999">+7 (999) 999-99-99</a>
+                            <a id="f2" class="footer__phone" href="tel:79999999999">+7 (999) 999-99-99</a>
+                            <a id="f2" class="footer__phone" href="tel:79999999999">+7 (999) 999-99-99</a>
                         </div>
                     </div>
                     <div class="footer__wrapper-email">
                         <img class="footer__email-img" src="icons/Icon-email.png" alt="Картинка почты">
-                        <mail class="footer__email-text">info@gmail.com</mail>
+                        <mail id="f3" class="footer__email-text">info@gmail.com</mail>
                     </div>
                     <div class="footer__wrapper-social-icons">
                         <a href="#"><img src="icons/facebook.png" alt="facebook" class="footer__social-icons"></a>
