--- a/index.html
+++ b/index.html
@@ -400,6 +400,9 @@
     <!-- Анимация -->
     <script src="js/aos.js"></script>
     <!-- -------- -->
+    <!-- Retina -->
+    <script src="js/retina.js"></script>
+    <script src="js/retina.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
