--- a/index.html
+++ b/index.html
@@ -133,29 +133,29 @@
         <h2 class="coop-title">6 ПРИЧИН <span>ДЛЯ СОТРУДНИЧЕСТВА </span>С НАМИ</h2>
         <div class="coop__wrapper-all">
             <div class="coop__wrapper-left">
-                <div data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000" class="coop__block-text-left">
+                <div data-aos="zoom-in-right" class="coop__block-text-left">
                     <div class="coop-title-block">Снижение затрат</div>
                     <div class="coop__text">Аутсорсинг бухгалтерских услуг<br> от нашей компании позволит Вам<br> сэкономить до 70% затрат на<br> содержание собственных<br> бухгалтеров</div>
                 </div>
-                <div data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000" class="coop__block-text-left-v">
+                <div data-aos="zoom-in-right" class="coop__block-text-left-v">
                     <div class="coop-title-block">Высокий уровень<br> сервиса</div>
                     <div class="coop__text">Стандартизированные<br> бизнес-процессы и система<br> внутреннего контроля позволяют<br> нам решать сложные вопросы<br> быстро и эффективно</div>
                 </div>
-                <div data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000" class="coop__block-text-left">
+                <div data-aos="zoom-in-right" class="coop__block-text-left">
                     <div class="coop-title-block">Экономия времени</div>
                     <div class="coop__text">Вы сможете полностью<br> сконцентрироваться<br> на основном бизнесе<br> и не тратить время<br> на решение бухгалтерского<br> и налогового учета</div>
                 </div>
             </div>
             <div class="coop__wrapper-right">
-                <div data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000" class="coop__block-text-right">
+                <div data-aos="zoom-in-left" class="coop__block-text-right">
                     <div class="coop-title-block">Надежный партнер</div>
                     <div class="coop__text">Персональный бухгалтер<br> оперативно выполнит задачи<br> в срок с надлежащим качеством</div>
                 </div>
-                <div data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000" class="coop__block-text-right-v">
+                <div data-aos="zoom-in-left" class="coop__block-text-right-v">
                     <div class="coop-title-block">Ответственность</div>
                     <div class="coop__text">Компания несет ответственность<br> за правильность ведения<br> бухгалтерского и налогового<br> учета в рамках договора на<br> обслуживание, заключенного<br> с Вашей компанией в срок<br> с надлежащим качеством</div>
                 </div>
-                <div data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000" class="coop__block-text-right">
+                <div data-aos="zoom-in-left" class="coop__block-text-right">
                     <div class="coop-title-block">Конфиденциальность</div>
                     <div class="coop__text">Компания обеспечит<br> конфиденциальность полученной<br> информации и сведений,<br> содержащихся в документах</div>
                 </div>
